website/i18n/fr/docusaurus-plugin-content-docs/version-3.0.1/api/plugins/plugin-sitemap.mdx
---
sidebar_position: 10
slug: /api/plugins/@docusaurus/plugin-sitemap
---

# 📦 plugin-sitemap

import APITable from '@site/src/components/APITable';

Ce plugin crée des sitemaps pour votre site afin que les robots des moteurs de recherche puissent explorer votre site avec plus de précision.

:::warning seulement en production

Ce plugin est toujours inactif en développement et **uniquement actif en production** car il fonctionne sur la sortie de la construction.

:::

## Installation {#installation}

```bash npm2yarn
npm install --save @docusaurus/plugin-sitemap
```

:::tip

Si vous utilisez le preset `@docusaurus/preset-classic`, vous n'avez pas besoin d'installer ce plugin en tant que dépendance.

Vous pouvez configurer ce plugin via les [options du preset](../../using-plugins.mdx#docusauruspreset-classic).

:::

## Configuration {#configuration}

Champs acceptés :

```mdx-code-block
<APITable>
```

| Nom              | Type       | Par défaut    | Description                                                                                                                                              |
| ---------------- | ---------- | ------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `changefreq`     | `string`   | `'weekly'`    | Voir [docs sitemap](https://www.sitemaps.org/protocol.html#xmlTagDefinitions)                                                                            |
| `priority`       | `number`   | `0.5`         | Voir [docs sitemap](https://www.sitemaps.org/protocol.html#xmlTagDefinitions)                                                                            |
| `ignorePatterns` | `string[]` | `[]`          | Une liste de patterns de glob; les chemins de route correspondants seront filtrés du sitemap. Notez que vous devrez peut-être inclure l'URL de base ici. |
| `filename`       | `string`   | `sitemap.xml` | Le chemin vers le fichier sitemap créé, relatif au répertoire de sortie. Utile si vous avez deux instances de plugin qui sortent deux fichiers.          |

```mdx-code-block
</APITable>
```

:::info

Ce plugin respecte également la configuration de certains sites :

- [`noIndex`](../docusaurus.config.js.mdx#noIndex) : aucun sitemap n'est généré
- [`trailingSlash`](../docusaurus.config.js.mdx#trailingSlash) : détermine si les URLs dans le sitemap ont des slashs de fin

:::

### Exemple de configuration {#ex-config}

Vous pouvez configurer ce plugin via les options du preset ou du plugin.

:::tip

La plupart des utilisateurs de Docusaurus configurent ce plugin via les options du preset.

:::

```js config-tabs
// Options du preset : sitemap
// Options du plugin : @docusaurus/plugin-sitemap

const config = {
  changefreq: 'weekly',
  priority: 0.5,
  ignorePatterns: ['/tags/**'],
  filename: 'sitemap.xml',
};
```

Vous pouvez trouver votre sitemap sur `/sitemap.xml`.
